# opentext

./: CMakeLists.txt  FindZ3.cmake  LICENSE  README.md  common.h  sudoku.cpp  sudoku_uvp.cpp  sudoku_z3.cpp
benchmarks/: README  hardestn  opentext1  opentext2
benchmarks/easy50/: bench1  bench10  bench11  bench12  bench13  bench14  bench15  bench16  bench17  bench18  bench19  bench2  bench20  bench21  bench22  bench23  bench24  bench25  bench26  bench27  bench28  bench29  bench3  bench30  bench31  bench32  bench33  bench34  bench35  bench36  bench37  bench38  bench39  bench4  bench40  bench42  bench43  bench44  bench45  bench46  (+9 more)
benchmarks/hardest/: bench1  bench10  bench11  bench2  bench3  bench4  bench5  bench6  bench7  bench8  bench9
benchmarks/top95/: bench1  bench10  bench11  bench12  bench13  bench14  bench15  bench16  bench17  bench18  bench19  bench2  bench20  bench21  bench22  bench23  bench24  bench25  bench26  bench27  bench28  bench29  bench3  bench30  bench31  bench32  bench33  bench34  bench35  bench36  bench37  bench38  bench39  bench4  bench40  bench41  bench42  bench43  bench44  bench45  (+55 more)
